--- a/index.html
+++ b/index.html
@@ -15,90 +15,6 @@
 </head>
 <body data-ng-app="subcontractorsApp">
 <div class="container" data-ng-controller="resultsController">
-    <div class="row">
-        <div id="search" class="col-md-3">
-            <form>
-                <div class="form-group">
-                    <h3>Company</h3>
-                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum massa eu risus laoreet facilisis. Integer porttitor euismod purus, in facilisis dui aliquam at.</small>
-                    <label class="sr-only" for="keyword">Search Company</label>
-                    <input class="col-sm-12 form-control" type="text" id="keyword" data-ng-model="search.contractor" placeholder="Company name" autocomplete="off">
-                </div>
-                <div class="form-group">
-                    <h3>NAICS Code</h3>
-                    <small>If a user knows the first three digits - wouldn't they know ALL the digits?</small>
-                    <select class="form-control" data-ng-model="search.naics_code">
-                        <option value="" selected="selected"></option>
-                        <option value="334">334</option>
-                        <option value="541">541</option>
-                        <option value="531">531</option>
-                        <option value="493">493</option>
-                        <option value="423">423</option>
-                        <option value="518">518</option>
-                        <option value="443">443</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <h3>Location</h3>
-                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum massa eu risus laoreet facilisis. Integer porttitor euismod purus, in facilisis dui aliquam at.</small>
-                    <select class="form-control" data-ng-model="search.performance_state">
-                        <option value="" selected="selected"></option>
-                        <option value="AL">Alabama</option>
-                        <option value="AK">Alaska</option>
-                        <option value="AZ">Arizona</option>
-                        <option value="AR">Arkansas</option>
-                        <option value="CA">California</option>
-                        <option value="CO">Colorado</option>
-                        <option value="CT">Connecticut</option>
-                        <option value="DE">Delaware</option>
-                        <option value="DC">District Of Columbia</option>
-                        <option value="FL">Florida</option>
-                        <option value="GA">Georgia</option>
-                        <option value="HI">Hawaii</option>
-                        <option value="ID">Idaho</option>
-                        <option value="IL">Illinois</option>
-                        <option value="IN">Indiana</option>
-                        <option value="IA">Iowa</option>
-                        <option value="KS">Kansas</option>
-                        <option value="KY">Kentucky</option>
-                        <option value="LA">Louisiana</option>
-                        <option value="ME">Maine</option>
-                        <option value="MD">Maryland</option>
-                        <option value="MA">Massachusetts</option>
-                        <option value="MI">Michigan</option>
-                        <option value="MN">Minnesota</option>
-                        <option value="MS">Mississippi</option>
-                        <option value="MO">Missouri</option>
-                        <option value="MT">Montana</option>
-                        <option value="NE">Nebraska</option>
-                        <option value="NV">Nevada</option>
-                        <option value="NH">New Hampshire</option>
-                        <option value="NJ">New Jersey</option>
-                        <option value="NM">New Mexico</option>
-                        <option value="NY">New York</option>
-                        <option value="NC">North Carolina</option>
-                        <option value="ND">North Dakota</option>
-                        <option value="OH">Ohio</option>
-                        <option value="OK">Oklahoma</option>
-                        <option value="OR">Oregon</option>
-                        <option value="PA">Pennsylvania</option>
-                        <option value="RI">Rhode Island</option>
-                        <option value="SC">South Carolina</option>
-                        <option value="SD">South Dakota</option>
-                        <option value="TN">Tennessee</option>
-                        <option value="TX">Texas</option>
-                        <option value="UT">Utah</option>
-                        <option value="VT">Vermont</option>
-                        <option value="VA">Virginia</option>
-                        <option value="WA">Washington</option>
-                        <option value="WV">West Virginia</option>
-                        <option value="WI">Wisconsin</option>
-                        <option value="WY">Wyoming</option>
-                    </select>
-                </div>
-                <button data-ng-click="getData()" class="btn-block btn btn-primary">Search</button>
-            </form>
-        </div>
         <div id="info" class="col-md-9">
             <h1>Using the Subcontracting Directory</h1>
             <p><strong>Who the GSA Subcontracting Directory is for</strong>: The GSA Subcontracting Directory is published for small business concerns seeking subcontracting opportunities with General Services Administration (GSA)
@@ -127,14 +43,95 @@
             <p><strong>Regional assistance: </strong>Looking beyond the directory? The eleven regional <a href="http://www.gsa.gov/portal/staffDirectory/topic/37@@">GSA Small Business Centers</a> offer more information regarding these opportunities.</p>
             <p>If you want insight into what GSA expects from prime contractors when crafting a subcontracting agreement, review GSA's template <a href="/portal/getMediaData?mediaId=189127">model subcontracting plan</a> (<a href="/portal/getMediaData?mediaId=189123">Section 508 compliant version</a>), which it offers to prime contractors to help them frame their objectives.</p>
             <p>The shortcut to this page is www.gsa.gov/subdirectory.</p>
+            <button data-ng-click="getData()" class="btn-block btn btn-primary">View All Contractors</button>
         </div>
 
         <div id="results" class="col-md-9">
             <div class="clearfix">
-                <h3 class="pull-left">Your search returned <b>{{(contracts | filter:search).length }}</b> results:</h3>
+                <h3 class="pull-left">Displaying <b>{{(contracts | filter:search).length }}</b> results:</h3>
                 <button id="export-option" class="btn btn-danger pull-right" data-ng-show="(contracts | filter:search).length > 0" href="#" data-ng-click="exportData()">Export to xls</button>
             </div>
-            <div id="table-test" style="display:none">
+            <hr>
+            <div id="search">
+                <form>
+                    <div class="form-group">
+                        <h3>Company</h3>
+                        <label class="sr-only" for="keyword">Search Company</label>
+                        <input class="col-sm-12 form-control" type="text" id="keyword" data-ng-model="search.contractor" placeholder="All" autocomplete="off">
+                        <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </small>
+                    </div>
+                    <h4>Advanced Filters</h4>
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                            <h3>NAICS Code</h3>
+                            <select class="form-control" data-ng-model="search.naics_front" data-ng-options="contract.naics_front as contract.naics_front for contract in contracts | unique : 'naics_front'| orderBy : 'naics_front'">
+                                <option value="null" </option>
+                            </select>
+                            <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </small>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <h3>Location</h3>
+                            <select class="form-control" data-ng-model="search.performance_state">
+                                <option value=" " selected="selected">All</option>
+                                <option value="AL">Alabama</option>
+                                <option value="AK">Alaska</option>
+                                <option value="AZ">Arizona</option>
+                                <option value="AR">Arkansas</option>
+                                <option value="CA">California</option>
+                                <option value="CO">Colorado</option>
+                                <option value="CT">Connecticut</option>
+                                <option value="DE">Delaware</option>
+                                <option value="DC">District Of Columbia</option>
+                                <option value="FL">Florida</option>
+                                <option value="GA">Georgia</option>
+                                <option value="HI">Hawaii</option>
+                                <option value="ID">Idaho</option>
+                                <option value="IL">Illinois</option>
+                                <option value="IN">Indiana</option>
+                                <option value="IA">Iowa</option>
+                                <option value="KS">Kansas</option>
+                                <option value="KY">Kentucky</option>
+                                <option value="LA">Louisiana</option>
+                                <option value="ME">Maine</option>
+                                <option value="MD">Maryland</option>
+                                <option value="MA">Massachusetts</option>
+                                <option value="MI">Michigan</option>
+                                <option value="MN">Minnesota</option>
+                                <option value="MS">Mississippi</option>
+                                <option value="MO">Missouri</option>
+                                <option value="MT">Montana</option>
+                                <option value="NE">Nebraska</option>
+                                <option value="NV">Nevada</option>
+                                <option value="NH">New Hampshire</option>
+                                <option value="NJ">New Jersey</option>
+                                <option value="NM">New Mexico</option>
+                                <option value="NY">New York</option>
+                                <option value="NC">North Carolina</option>
+                                <option value="ND">North Dakota</option>
+                                <option value="OH">Ohio</option>
+                                <option value="OK">Oklahoma</option>
+                                <option value="OR">Oregon</option>
+                                <option value="PA">Pennsylvania</option>
+                                <option value="RI">Rhode Island</option>
+                                <option value="SC">South Carolina</option>
+                                <option value="SD">South Dakota</option>
+                                <option value="TN">Tennessee</option>
+                                <option value="TX">Texas</option>
+                                <option value="UT">Utah</option>
+                                <option value="VT">Vermont</option>
+                                <option value="VA">Virginia</option>
+                                <option value="WA">Washington</option>
+                                <option value="WV">West Virginia</option>
+                                <option value="WI">Wisconsin</option>
+                                <option value="WY">Wyoming</option>
+                            </select>
+                            <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </small>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <div id="csv-export" style="display:none">
                 <table>
                     <thead>
                     <tr>
@@ -187,17 +184,17 @@
                 <div class="well result">
                     <div class="row">
                         <div class="vcard col-md-6">
-                            <h4 class="fn"><a class="url" href="#" data-ng-bind-html="contract.contractor | highlight: search.contractor"></a></h4>
+                            <h4 class="fn" data-ng-bind-html="contract.contractor | highlight: search.contractor"></h4>
                             <p class="adr">
                                 <span class="street-address">{{contract.street}}</span><br>
                                 <span class="locality">{{contract.city}}</span>, <span class="region">{{contract.state}}</span> <span class="postal-code">{{contract.zip}}</span><br>
-                                <span data-ng-if="contract.phone != undefined">{{contract.phone}}</span>
+                                <span data-ng-if="contract.phone != '()-'">{{contract.phone}}</span>
                             </p>
                         </div>
                         <div class="col-md-6">
                             <ul class="list-unstyled">
                                 <li><b>P/S Description</b>: <span data-ng-bind-html="contract.description | highlight: query"></span></li>
-                                <li><b>NAICS Code</b>: <span data-ng-bind-html="contract.naics_code | highlight: search.naics_code"></span></li>
+                                <li><b>NAICS Code</b>: <span data-ng-bind-html="contract.naics_front | highlight: search.naics_front"></span>{{contract.naics_back}}</li>
                                 <li><b>Performance Place</b>: {{contract.performance_city}},
                                     <span data-ng-bind-html="contract.performance_state | highlight: search.performance_state"></span> {{contract.performance_zip}}</li>
                                 <li><b>Effective Date</b>: {{contract.effective_date}}</li>
@@ -218,11 +215,12 @@
                 </div>
             </div>
             <div data-ng-show="(contracts | filter:search).length == 0">
-                <h4 class="alert-warning">Your search did not return any results</h4>
+                <h4 class="alert-warning">There are no results matching these search parameters</h4>
                 <h4>Suggestions:</h4>
                 <ul>
                     <li>Make sure all words are spelled correctly or numbers are entered properly</li>
                     <li>Use a different search term</li>
+                    <li>Use more broad search terms</li>
                     <li>Contact <a href="mailto:somedude@gsa.gov">somedude@gsa.gov</a></li>
                 </ul>
             </div>
