--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/all.css">
     <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
-<body data-ng-app="subcontractorsApp">
-<div class="container">
+<body >
+<div class="container" data-ng-app="subcontractorsApp">
      <section data-ng-controller="resultsController">
         <div id="info" class="col-md-9">
             <h1>Using the Subcontracting Directory</h1>
@@ -64,7 +64,7 @@
                             <small>Select a three digit category</small>
                             <em class="clear-filter" data-ng-show="filterNaics" data-ng-click="clearNaics()">X</em>
                         </div>
-                        <div class="form-group col-md-3">
+                        <!--<div class="form-group col-md-3">
                             <h4>Place of Performance</h4>
                             <select class="form-control" data-ng-model="search.performance_state" data-ng-change="changePerformPlace()">
                                 <option value="AL">Alabama</option>
@@ -121,7 +121,7 @@
                             </select>
                             <small>Select state in which work takes place</small>
                             <em class="clear-filter" data-ng-show="filterPerformPlace" data-ng-click="clearPerformPlace()">X</em>
-                        </div>
+                        </div>-->
                         <div class="form-group col-md-3">
                             <h4>Company Location</h4>
                             <select class="form-control" data-ng-model="search.state" data-ng-change="changeCompLoc()">
@@ -183,7 +183,7 @@
                         <div class="form-group col-md-3">
                             <h4>Region of Performance</h4>
                             <select class="form-control" data-ng-model="search.region" data-ng-change="changeRegion()">
-                                <option value="1">New England Region 1</option>
+                                <option value="01">New England Region 1</option>
                                 <option value="2">Northeast and Caribbean Region 2</option>
                                 <option value="3">Mid-Atlantic Region 3</option>
                                 <option value="4">Southeast Sunbelt Region 4</option>
@@ -271,7 +271,7 @@
             </div>
             <div class="clearfix"></div>
             <!-- repeater -->
-            <div class="result" dir-paginate="contract in contracts | filter : search | itemsPerPage: pageSize">
+            <div class="result" dir-paginate="contract in contracts | filter : search | orderBy : 'contractor' | itemsPerPage: pageSize">
                 <div class="well result">
                     <div class="row">
                         <div class="vcard col-md-6">
